2006-01-14  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h: more --summary output.
	  List OFC codes now.

	* library.c:
	  Cleaned up config function parameter lists.
	  Need to property desc on "put" too (for Focal Length
	  currently).
	  Replaced 19 tablelookup based functions doing
	  the same by 2.

	  Implemented configuration for:
		- FocalLength
		- FocusMode

2006-01-12  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c, ptp-pack.c:
	  Unpack all members of the StorageInfo structure.
	  Add Storage summary to --summary output.

2006-01-11  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Also split ptp writes into 4k chunks
	  to avoid lowlevel timeouts.

2006-01-09  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: added iRiver U10.

2006-01-08  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp-pack.c, ptp.h: Enhanced ptp_nikon_check_event(),
	  unpack event list.

2006-01-06  Marcus Meissner  <marcus@jet.franken.de>

	* PTPIP.TXT: describes PTP/IP communication basics.
	  

2006-01-05  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Removed one unnecessary line of code.
	  Use event_check instead of event_wait for now in
	  canon specific delete code.
	  Added Fuji Finepix E900/PictBridge id.

	* library.c: Added Philipps HDD6320 MTP player.

2006-01-01  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Add EOS 350 canon id too, since
	  it apparently reacts to PTP traffic on it too.

	* ptp.c, ptp.h: Adjusted several canon properties to 
	  better names. Added some previously not known ones.
	  "ramsize" is actually "firmwareversion" and so on.

2005-12-30  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Only allow getpartialobject for EXIF
	  JPEG images.

2005-12-29  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, library.c:
	  Added "fast filesystem" startup mode for newer
	  Nikon cameras.

	  For cards with large number of images this patch